Fix message container z-index to low compared to selection div

--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ a:active, a:hover {
     left: 0px;
     width: 100%;
     padding: 0.2em;
+    z-index: 10;
 }
 
 #bodyContainer {
